# Simple-Chess

./: .gitignore  CMakeLists.txt  README.md
include/: Bishop.h  Board.h  GameWindow.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  ResourceManager.h  Rook.h  Utils.h  piece.h
src/: Bishop.cpp  Board.cpp  GameWindow.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  ResourceManager.cpp  Rook.cpp  Utils.cpp  main.cpp  utils.cpp
